Fix wrap on demo code

--- a/src/app/components/demo/demo.scss
+++ b/src/app/components/demo/demo.scss
@@ -72,6 +72,10 @@
         &.active {
             display: block;
         }
+
+        code {
+            white-space: pre-wrap;
+        }
     }
 
     .demo-block__preview {
